Module 11/Task10/Gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-app-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway   
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
